# qipai

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  build_iosmac.sh  build_linux.sh  build_win.bat  ddz.txt
doc/: ddz.txt  mahjong-terms.md  mj.txt  mjhz.md  mjhz.txt  mjjy.md
jni/: Android.mk  Application.mk  com_gameld_core_libqp.cpp  com_gameld_core_libqp.h
qt/: libqp.pro  qipai.pro
qt/MahTest/: MahTest.pro  mahtest.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: CMakeLists.txt  Makefile  card.c  card.h  card_algo.c  card_algo.h  card_player.c  card_player.h  card_sort.c  ddz.c  ddz.h  deck.c  deck.h  dn.c  dn.h  gp.c  gp.h  hand.c  hand.h  hand_type.c  hand_type.h  ht_lch.h  ht_str.c  ht_str.h  mj.c  mj.h  mj_algo.c  mj_algo.h  mjhz.c  mjhz.h  qipai.h  qp_comm.c  qp_comm.h  qp_common.c  qp_common.h  qp_error.h  qpdef.h  sort_card.c  sort_card.h  texas.c  (+1 more)
swig/: libqp.i  libqp.py  libqp_wrap.c  test_ddz.py  test_gp.py  test_hand.py  test_texas.py
test/: CMakeLists.txt  ht_log.cc  ht_log.h  test.c  test.cpp  test_gp.c  test_mjhz.c
toolchain/: android.cmake
